src/pages/recite-passage/recite-passage.scss
page-recite-passage {
  .recite-passage-fab {
    background-color: #004d4d;
  }

  .scroll-content {
    padding: 16px;
  }

  .recite-passage {
    font-size: 16px;
    margin-left: 44px;
    padding-left: 12px;
    position: relative;

    &.forgetica-enabled {
      font-family: map-get($font-family, forgettable);

      span {
        font-family: map-get($font-family, default);
      }
    }
  }

  .verse-num {
    color: #008080;
    display: inline-block;
    font-weight: bold;
    left: -44px;
    min-width: 36px;
    position: absolute;
    text-align: center;
  }
}


.esv-copylabel {
  text-align: center;
  padding: 6px 8px;
  font-size: 11px;

  span {
    cursor: pointer;
    color: #018080;
    text-decoration: underline;
  }
}

